# OpenGL-Cherno-Tutorial

./: .gitignore  CMakeLists.txt  READ.md
res/textures/: terminal_image.gif:Zone.Identifier
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
